Added nullness annotations to automation handler
Signed-off-by: Christoph Weitkamp <github@christophweitkamp.de>